fix: layout bugs

--- a/main.scss
+++ b/main.scss
@@ -12,10 +12,14 @@ $bold: 700;
   // transition:all 500ms cubic-bezier(0.68,-0.55,0.27,1.55);
   font-family: "Inter", sans-serif;
   color: white;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   // transition: all 1s cubic-bezier(0.08, 0.82, 0.17, 1);
 }
 
 body {
+  overflow: hidden;
   width: 100%;
   height: 100vh;
   background: black;
